// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="Input__InputFieldGroup-bdQEwu kZedPI FieldGroup-iFQzIc dToppz"
>
  <input
    className="Input__InputTag-INLdc eQvqsJ"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="Input__InputFieldGroup-bdQEwu kZedPI FieldGroup-iFQzIc dToppz"
>
  <input
    className="Input__InputTag-INLdc eQvqsJ"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  <label
    className="Input__InputLabel-jrPAft gBUYoA Label-bxMjsr iZhmvb"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="Input__InputFieldGroup-bdQEwu kZedPI FieldGroup-iFQzIc dToppz"
>
  <input
    className="Input__InputTag-INLdc flIBdF"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  
  <div
    className="ErrorMessage-eJhZpN jUpnFq"
  >
    Error message
  </div>
</div>
`;
